# agent-chat

./: .gitignore  CODE_REVIEW_REPORT.md  QUICKSTART.md  README.md  code_review_report.md  pyproject.toml  setup_session.py
agent_chat/: __init__.py  __main__.py  cli.py  mcp_server.py
agent_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent_chat/core/: __init__.py  models.py  store.py
agent_chat/prompts/: __init__.py  templates.py
agent_chat/sdk/: __init__.py  client.py
agent_chat/tui/: __init__.py  app.py
agent_chat/web/: __init__.py  server.py
agent_chat/web/static/: app.js  index.html  style.css
examples/: claude_desktop_config.json  vscode_mcp.json  windsurf_mcp_config.json
tests/: conftest.py  test_cli.py  test_core.py  test_integration.py  test_mcp.py  test_tui.py  test_web.py
