[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-chat"
version = "0.1.0"
description = "A communication protocol for LLM agents working in parallel"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ben" },
]

dependencies = [
    "textual>=0.47.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-chat = "agent_chat.cli:app"

[tool.setuptools.packages.find]
include = ["agent_chat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
